@@ -68,8 +68,12 @@ int retcode;
 int tracing;
 
 
+#ifndef CELL_SEGSIZE
 #define CELL_SEGSIZE    5000  /* # of cells in one segment */
+#endif
+#ifndef CELL_NSEGMENT
 #define CELL_NSEGMENT   10    /* # of segments for cells */
+#endif
 char *alloc_seg[CELL_NSEGMENT];
 pointer cell_seg[CELL_NSEGMENT];
 int     last_cell_seg;
@@ -117,7 +121,9 @@ pointer outport;
 pointer save_inport;
 pointer loadport;
 
+#ifndef MAXFIL
 #define MAXFIL 64
+#endif
 port load_stack[MAXFIL];     /* Stack of open files for port -1 (LOADing) */
 int nesting_stack[MAXFIL];
 int file_i;
@@ -126,9 +132,13 @@ int nesting;
 char    gc_verbose;      /* if gc_verbose is not zero, print gc status */
 char    no_memory;       /* Whether mem. alloc. has failed */
 
+#ifndef LINESIZE
 #define LINESIZE 1024
+#endif
 char    linebuff[LINESIZE];
+#ifndef STRBUFFSIZE
 #define STRBUFFSIZE 256
+#endif
 char    strbuff[STRBUFFSIZE];
 
 FILE *tmpfp;
